# sage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_console.txt
.github/workflows/: ci.yml
docs/: architecture.md  dev-log-2026-07-15.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
examples/: seed_and_chat.py
sage/: __init__.py  agent.py  cli.py  config.py  db.py  embeddings.py  memory.py  rag.py  server.py  tools.py  types.py
sage/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
tests/: test_core.py  test_server.py
web/: index.html
